--- a/server/manifest.yml
+++ b/server/manifest.yml
@@ -1,11 +1,11 @@
   applications:
   - name: djangoapp
     routes:
-      - route: $HOST.$DOMAIN
+      - route: rsol-capstone.eu-gb.mybluemix.net
     memory: 128M
     buildpack: python_buildpack
   - name: djangoapp-nginx
     routes:
-      - route: $HOST.$DOMAIN/static
+      - route: rsol-capstone.eu-gb.mybluemix.net/static
     memory: 128M
     buildpack: staticfile_buildpack
